--- a/Test_code_git_hub.ipynb
+++ b/Test_code_git_hub.ipynb
@@ -31,6 +31,7 @@
     "if is_prime(num):\n",
     "  print('is prime')\n",
     "  print('welcome')\n",
+    "  print('thank u')\n",
     "else:\n",
     "  print('not prime')\n"
    ]
